--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@phosphor-icons/web": "^2.1.2",
     "core-js": "^3.8.3",
     "firebase": "^9.19.1",
     "vue": "^3.2.13",
